Amend padding for order sumary page to avoid distortion from navbar

--- a/checkout/static/checkout/css/checkout.css
+++ b/checkout/static/checkout/css/checkout.css
@@ -54,7 +54,7 @@ select option[value=""] {
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgba(23, 162, 184, .85);
+    background: fuchsia;
     z-index: 9999;
 }
 
